--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>My first three.js app</title>
+    <title>geometry</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
