--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <script src="js/three.js"></script>
+    <script src="js/OrbitControls.js"></script>
     <script src="js/view.js"></script>
   </body>
 </html>
